Fix/improvement - Add class "cardWithDropDownList" which can be used by MDL Card - It allows to use DropDownList component inside Card without cropping issue

--- a/frameworks/projects/MaterialDesignLite/src/main/resources/defaults.css
+++ b/frameworks/projects/MaterialDesignLite/src/main/resources/defaults.css
@@ -34,6 +34,12 @@
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
 
+.cardWithDropDownList
+{
+    overflow: visible !important;
+    z-index: initial !important;
+}
+
 TextField
 {
     IBeadModel: ClassReference("org.apache.flex.html.beads.models.TextModel");
